# openenv-dataqa

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
dataqa_env/: __init__.py  client.py  models.py
dataqa_env/server/: Dockerfile  app.py  environment.py  gradio_ui.py  tasks.py
server/: __init__.py  app.py
tests/: test_environment.py  test_extensibility.py  test_inference.py  test_tasks.py
